# yeelight-cpp

./: .gitignore  CMakeLists.txt  cli
src/cli/: main.cpp
src/yeelight/: bulbs_discover.cpp  bulbs_discover.h
